Add deployment configuration and refactor project structure
- Add .env.example for environment variable template (removed exposed API keys)
- Configure Git submodule for huggingface-cloth-segmentation
- Add comprehensive project documentation (README, PROJECT_REVIEW)
- Restructure AI model services (cloth segmentation, inpainting, outfit try-on)
- Add Python service workers with RabbitMQ integration
- Implement cloth processing pipeline with async messaging
- Add virtual try-on service with Gemini API integration
- Update Spring Boot dependencies and RabbitMQ configuration
- Remove sensitive files from Git tracking (output/, .gradio/)
- Add frontend build and configuration files

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>